--- a/nuspec/Invisionware.Net.RestEase.nuspec
+++ b/nuspec/Invisionware.Net.RestEase.nuspec
@@ -4,15 +4,16 @@
 		<id>Invisionware.Net.RestEase</id>
 		<version>1.1.5-pre07</version>
 		<title>Invisionware.Net.RestEase</title>
-		<authors>ravensorb</authors>
-		<owners>ravensorb</owners>
+		<authors>Invisionware</authors>
+		<owners>Invisionware</owners>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Contains various extensions and supporting utilities for RestEase</description>
 		<summary>Contains various extensions and supporting utilities for RestEase</summary>
 		<projectUrl>https://github.com/Invisionware/Net</projectUrl>
 		<licenseUrl>https://raw.githubusercontent.com/Invisionware/Net/master/LICENSE</licenseUrl>
+		<iconUrl>https://github.com/Invisionware/Net/raw/master/logo.png</iconUrl>
 		<releaseNotes></releaseNotes>
-		<copyright>(c) 2016 Invisionware</copyright>
+		<copyright>Copyright © 2018 Invisionware</copyright>
 		<language>en-US</language>
 		<tags>invisionware restease</tags>
 		<dependencies>
