--- a/nuspec/Invisionware.Net.GeoCoding.nuspec
+++ b/nuspec/Invisionware.Net.GeoCoding.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 	<metadata>
 		<id>Invisionware.Net.GeoCoding</id>
-		<version>1.1.5-pre07</version>
+		<version>1.0.0</version>
 		<title>Invisionware.Net.GeoCoding</title>
 		<authors>Invisionware</authors>
 		<owners>Invisionware</owners>
@@ -25,10 +25,9 @@
 				<dependency id="System.Reflection" version="4.3.0" />
 				<dependency id="Serilog" version="2.2.1" />
 
-				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
-
+				<dependency id="Invisionware.Ioc" version="1.0.1" />
 				<dependency id="Invisionware.Serialization" version="1.1.4" />
-				<dependency id="Invisionware.Net" version="1.1.5-pre07" />
+				<dependency id="Invisionware.Net" version="1.1.5" />
 
 			</group>
 			<group targetFramework="NetStandard1.1">
