--- a/build.settings.json
+++ b/build.settings.json
@@ -1,15 +1,14 @@
 {
 	"version": {
 		"VersionFile": "./build.version.json",
-		"AssemblyInfoFile": null,
+		"AssemblyInfoFile": "./src/AssemblyInfo.Shared.cs",
 		"LoadFrom": "versionfile",
 		"AutoIncrementVersion": false
 	},
 	"build": {
 		"SourcePath": "./src",
 		"SolutionFileSpec": "./*.sln",
-		"BuildOutPutPath": "", 
-		"ArtifactsPath": "./artifacts/artifacts",
+		"ArtifactsPath": "./artifacts/app",
 		"TreatWarningsAsErrors": false
 	},
 	"xamarin": {
@@ -21,19 +20,19 @@
 	"test": {
 		"SourcePath": "./tests",
 		"ResultsPath": "./artifacts",
-		"AssemblyFileSpec": "*.Tests.dll",
+		"AssemblyFileSpec": "*.UnitTests.dll",
 		"Framework": "NUnit3"
 	},
 	"nuget": {
-		"NuGetConfig": "",
-		"FeedUrl": "https://www.nuget.org",
-		"FeedAPIKey": "NUGETAPIKEY",
+		"NuGetConfig": "./.nuget/NuGet.config",
+		"FeedUrl": "https://www.nuget.com",
+		"FeedAPIKey": "[NUGETAPIKEY]",
 		"ArtifactsPath": "./artifacts/packages",
 		"NuspecPath": "./nuspec",
 		"UpdateVersion": true,
-		"UpdateLibraryDependencies": true,
+		"UpdateLibraryDependencies": false,
 		"VersionDependencyForLibrary": "greaterthanorequal",
-		"LibraryNamespaceBase": "Invisionware.Net",
+		"LibraryNamespaceBase": "",
 		"LibraryMinVersionDependency": ""
 	}
 }
