--- a/nuspec/Invisionware.Net.nuspec
+++ b/nuspec/Invisionware.Net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 	<metadata>
 		<id>Invisionware.Net</id>
-		<version>1.1.5-pre07</version>
+		<version>1.0.0</version>
 		<title>Invisionware.Net</title>
 		<authors>Invisionware</authors>
 		<owners>Invisionware</owners>
@@ -20,7 +20,7 @@
 			<group>
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
 				<dependency id="System.Net.Http" version="4.3.2" />
-			  <dependency id="System.Net.Primitives" version="4.3.0" />
+				<dependency id="System.Net.Primitives" version="4.3.0" />
 				<dependency id="Serilog" version="2.5.0" />
 
 				<dependency id="Invisionware.Serialization" version="1.1.4" />
