--- a/src/.nuget/NuGet.Config
+++ b/src/.nuget/NuGet.Config
@@ -4,8 +4,7 @@
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
   <packageSources>
-    <add key="nuget.org (v2)" value="https://www.nuget.org/api/v2/" />
-    <!-- add key="nuget.org (v3)" value="https://api.nuget.org/v3/index.json" protocolVersion="3" -->
+    <add key="nuget.org (v3)" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <disabledPackageSources />
   <activePackageSource>
