Updated references Updated nuspec files for new references and version number Updated namespaces to match root namespace Added support for detecting content type for RestEase deserialization Added support for language localization in string functions

--- a/build.settings.json
+++ b/build.settings.json
@@ -20,7 +20,7 @@
 	"test": {
 		"SourcePath": "./tests",
 		"ResultsPath": "./artifacts",
-		"AssemblyFileSpec": "*.UnitTests.dll",
+		"AssemblyFileSpec": "*.Tests.dll",
 		"Framework": "NUnit3"
 	},
 	"nuget": {
