--- a/tests/Invisionware.Net.GeoCoding.Google.Tests/packages.config
+++ b/tests/Invisionware.Net.GeoCoding.Google.Tests/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.6.0" targetFramework="net451" />
-  <package id="FluentAssertions" version="4.19.4" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
-  <package id="NUnit" version="3.8.1" targetFramework="net46" />
-  <package id="XLabs.IoC" version="2.3.0-pre05" targetFramework="net451" />
-  <package id="XLabs.IoC.Autofac" version="2.3.0-pre05" targetFramework="net451" />
+  <package id="Autofac" version="4.8.1" targetFramework="net471" />
+  <package id="FluentAssertions" version="5.4.2" targetFramework="net471" />
+  <package id="Invisionware.IoC" version="1.0.0" targetFramework="net471" />
+  <package id="Invisionware.IoC.Autofac" version="1.0.0" targetFramework="net471" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
+  <package id="NUnit" version="3.10.1" targetFramework="net471" />
+  <package id="Serilog" version="2.7.1" targetFramework="net471" />
 </packages>
