--- a/src/Invisionware.Net.GeoCoding.Google/Invisionware.Net.GeoCoding.Google.csproj
+++ b/src/Invisionware.Net.GeoCoding.Google/Invisionware.Net.GeoCoding.Google.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Invisionware.Net.GeoCoding.Google</AssemblyName>
     <PackageId>Invisionware.Net.GeoCoding.Google</PackageId>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
@@ -11,14 +11,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="XLabs.IoC" Version="2.3.0-pre05" />
+    <PackageReference Include="Invisionware.IoC" Version="1.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Invisionware.Net.GeoCoding.Interfaces\Invisionware.Net.GeoCoding.Interfaces.csproj" />
     <ProjectReference Include="..\Invisionware.Net.GeoCoding\Invisionware.Net.GeoCoding.csproj" />
     <ProjectReference Include="..\Invisionware.Net.WebUtils\Invisionware.Net.WebUtils.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
