--- a/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
+++ b/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <Import Project="..\Invisionware.Net.RestEase.Shared\Invisionware.Net.RestEase.Shared.projitems" Label="Shared" />
 
   <ItemGroup>
-    <PackageReference Include="Invisionware.Serialization" Version="1.1.4" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="RestEase" Version="1.4.3" />
-    <PackageReference Include="Serilog" Version="2.5.0" />
+    <PackageReference Include="Invisionware.Serialization" Version="1.1.17" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="RestEase" Version="1.4.7" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
   </ItemGroup>
 
@@ -18,6 +18,10 @@
     <ProjectReference Include="..\Invisionware.Net\Invisionware.Net.csproj">
       <Private>false</Private>
     </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
