--- a/src/Invisionware.Net.WebUtils.Net46/packages.config
+++ b/src/Invisionware.Net.WebUtils.Net46/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Invisionware.Serialization" version="1.1.4" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Invisionware.Serialization" version="1.1.17" targetFramework="net46" />
+  <package id="Invisionware.Serialization.JSON" version="1.1.17" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
+  <package id="Serilog" version="2.7.1" targetFramework="net46" />
 </packages>
