--- a/tests/Invisionware.Net.GeoCoding.Google.Tests/app.config
+++ b/tests/Invisionware.Net.GeoCoding.Google.Tests/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="GoogleApiKey" value=""/>
+		<add key="GoogleApiKey" value="AIzaSyCwTTh-7fd8EUjts1ImYMYDvAMkq7bQbrQ"/>
 	</appSettings>
   <runtime>
 	<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
