--- a/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
+++ b/src/Invisionware.Net.RestEase/Invisionware.Net.RestEase.csproj
@@ -1,27 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
-  <Import Project="..\Invisionware.Net.RestEase.Shared\Invisionware.Net.RestEase.Shared.projitems" Label="Shared" />
-
-  <ItemGroup>
-    <PackageReference Include="Invisionware.Serialization" Version="1.1.16" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="RestEase" Version="1.4.7" />
-    <PackageReference Include="Serilog" Version="2.7.1" />
-    <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Invisionware.Net\Invisionware.Net.csproj">
-      <Private>false</Private>
-    </ProjectReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="NETStandard.Library" Version="2.0.0" />
-  </ItemGroup>
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<PackageId>Invisionware.Net.RestEase</PackageId>
+		<Authors>Invisionware</Authors>
+		<PackageProjectUrl>https://github.com/Invisionware/Invisionware.Net</PackageProjectUrl>
+		<PackageLicenseUrl>https://raw.githubusercontent.com/Invisionware/Invisionware.Net/master/LICENSE</PackageLicenseUrl>
+		<PackageIconUrl>https://github.com/Invisionware/Invisionware.Net/raw/master/logo.png</PackageIconUrl>
+		<Description>Contains various extensions and supporting utilities for RestEase</Description>
+		<PackageReleaseNotes></PackageReleaseNotes>
+		<Copyright>Copyright © 2018 Invisionware</Copyright>
+		<PackageTags>invisionware restease</PackageTags>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	</PropertyGroup>
+	<Import Project="..\Invisionware.Net.RestEase.Shared\Invisionware.Net.RestEase.Shared.projitems" Label="Shared" />
+	<ItemGroup>
+		<PackageReference Include="Invisionware.Serialization" Version="1.1.16" />
+		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+		<PackageReference Include="RestEase" Version="1.4.7" />
+		<PackageReference Include="Serilog" Version="2.7.1" />
+		<PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Invisionware.Net\Invisionware.Net.csproj">
+			<Private>false</Private>
+		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Update="NETStandard.Library" Version="2.0.0" />
+	</ItemGroup>
 </Project>
