--- a/build.settings.json
+++ b/build.settings.json
@@ -9,8 +9,9 @@
 		"BuildType": "dotnetcore",
 		"SourcePath": "./src",
 		"SolutionFileSpec": "./*.sln",
-		"ArtifactsPath": "./artifacts/app",
-		"TreatWarningsAsErrors": false
+		"ArtifactsPath": "./artifacts/packages",
+		"TreatWarningsAsErrors": false,
+		"CopyNugetPackagesToArtificatsPath":  true
 	},
 	"xamarin": {
 		"EnableXamarinIOS": false,
@@ -21,10 +22,11 @@
 	"test": {
 		"SourcePath": "./tests",
 		"ResultsPath": "./artifacts",
-		"AssemblyFileSpec": "*.Tests.dll",
+		"AssemblyFileSpec": "*.UnitTests.dll",
 		"Framework": "NUnit3"
 	},
 	"nuget": {
+		"BuildType": "dotnetcore",
 		"NuGetConfig": "./src/.nuget/NuGet.config",
 		"FeedUrl": "https://api.nuget.org/v3/index.json",
 		"FeedAPIKey": "NUGETAPIKEY",
